# my-configs

./: .bash_aliases  .eslintrc  .gitconfig  .jscsrc  .skhdrc  .vimrc  .yabairc  .zshrc  README.md  build_docker.sh  coc-settings.json  compose.yaml  init.vim  move-window-workspace.sh  nvim-docker.Dockerfile  run-iterm.sh  ycm_extra_conf.py
.i3/: config
apps/: Cargo.toml  install.sh  rustfmt.toml
apps/cleanup-spaces/: Cargo.toml
apps/cleanup-spaces/src/: main.rs
apps/common/: Cargo.toml
apps/common/src/: bool_from_int.rs  lib.rs  space.rs  window.rs
apps/enumerate-spaces/: Cargo.toml
apps/enumerate-spaces/src/: main.rs
apps/focus-space/: Cargo.toml
apps/focus-space/src/: main.rs
apps/move-window-to-space/: Cargo.toml
apps/move-window-to-space/src/: main.rs
keyboard/5x3_3/: keymap.c
keyboard/6x3_3/def/: keymap.c
keyboard/ergodox_keymap/combined/: ergodox_ez_base_combined.hex  keymap.c  rules.mk
keyboard/ergodox_keymap/main-default/: build.hex  keymap.c
keyboard/ergodox_keymap/universal-adapted-5x3-3/: ergodox_ez_base_universal-adapted-5x3-3.hex  keymap.c
keyboard/system-layout/macos/Contents/: Info.plist  version.plist
keyboard/system-layout/macos/Contents/Resources/: Англ-сплит.keylayout  Русская-сплит.keylayout
keyboard/system-layout/unversal-split.bundle/Contents/: Info.plist  version.plist
keyboard/system-layout/unversal-split.bundle/Contents/Resources/: eng-split-v5.keylayout  eng-split.keylayout  rus-split-v5.keylayout  rus-split.icns  (+3 more)
uber-widgets/: GettingStarted.jsx  toolbar-aux.jsx  toolbar-main.jsx  utils.js
(+2 files in other folders)
