[package]
name = "enumerate-spaces"
version = "0.1.0"
authors = ["Vasily G. Stavenko <stavenko@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path = "../common"}
tokio = { version="1", features=["full"]}
clap = "3.0.0-beta.2"
