[package]
name = "move-window-to-space"
version = "0.1.0"
authors = ["Vasily G. Stavenko <stavenko@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version="*", features=["derive"]}
tokio = { version="1", features=["full"]}
serde_json = "*"
clap = "3.0.0-beta.2"
common = {path = "../common"}
